# pysyntect

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.bat  build.sh
src/: easy.rs  html.rs  lib.rs  parser.rs  scope.rs  selector.rs  style.rs  syntax_definition.rs  syntax_set.rs  theme.rs  theme_set.rs
tests/: example2.py  example3.py  extract_scope.py  synhtml.py  synstats.py  test_easy.py  test_scope.py  test_selector.py  test_syntax_set.py  test_theme_set.py  test_yaml_load.py
