[package]
authors = ["BPL <spscener84@gmail.com>"]
categories = ["parser-implementations", "parsing", "text-processing"]
description = "library for high quality syntax highlighting and code intelligence using Sublime Text's grammars"
edition = "2018"
homepage = "https://github.com/brupelo/pysyntect"
keywords = ["syntax", "highlighting", "highlighter", "colouring", "parsing"]
name = "pysyntect"
repository = "https://github.com/brupelo/pysyntect"
version = "0.1.0"
readme = "README.md"

[lib]
name = "pysyntect"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.6.0-alpha.4"
features = ["extension-module"]

[package.metadata.pyo3-pack]
classifier = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python",
    "Programming Language :: Rust",

]

[dependencies]
syntect = { git = "https://github.com/brupelo/syntect"}
walkdir = "2.0"
textwrap = "0.11.0"
itertools = "0.8.0"
